Fix the classnames on wrapper

--- a/wp-content/extensions/newsletter/emails/themes/phusis/theme.html
+++ b/wp-content/extensions/newsletter/emails/themes/phusis/theme.html
@@ -43,12 +43,12 @@
       display: none;
     }
 
-  	table.wrapper {
+  	table[class="wrapper"] {
   		width:100% !important;
       border:
   	}
 
-    table.article {
+    table[class="article"] {
   		width:100% !important;
   	}
   }
