--- a/wp-content/extensions/newsletter/emails/themes/phusis/theme.html
+++ b/wp-content/extensions/newsletter/emails/themes/phusis/theme.html
@@ -8,6 +8,12 @@
   h1, h2 {
 	font-family: "Hoefler Text", "Constantia", Georgia, "Times New Roman", Times, serif;
     font-weight: normal;
+
+  }
+
+  h2 a {
+    text-decoration: none;
+    font-size: 18px;
   }
 
   .wrapper {
@@ -27,7 +33,6 @@
 
   table.article td h2 {
     margin: 10px;
-    min-height: 45px;
   }
 
   table.article td p {
@@ -56,7 +61,6 @@
   </style>
 </head>
 
-<body>
 <table cellspacing="0" cellpadding="0" id="header" class="wrapper" style="font-size: 14px; font-family: sans-serif; width: 640px"><tr><td>
 <table cellspacing="0" cellpadding="0" id="header" width="100%">
 <tr><td colspan="2"><h1 style="margin: 0;"><img src="newsletter_title_philosophie.png" alt="Phusis Philosophie; Michel Herren et Cie.; www.phusis.ch" width="50%" style="min-width: 400px; max-width: 100%;"></h1></td></tr>
@@ -76,7 +80,7 @@ GRÂCE À L’ENGAGEMENT ENTHOUSIASTE de nouveaux collaborateurs, PHUSIS a le pl
     <table class="article"><tr><td>
     <h2><a href="">Zarathoustra | Des hommes sublime</a></h2>
     <p>
-        <img src="p1.png" width="100%" height="120px" alt="">
+        <img src="p1.png" width="100%" height="120px" alt=""><br>
         POUR NOUS METTRE DANS L’AMBIANCE des Bacchantes d’Euripide, la première chose à faire, c’est de nous rendre en Grèce, la terre de nos célèbres ancêtres les Grecs...
     </p>
     </td>
@@ -86,14 +90,14 @@ GRÂCE À L’ENGAGEMENT ENTHOUSIASTE de nouveaux collaborateurs, PHUSIS a le pl
     <table class="article" border="0" cellpadding="0" cellspacing="0"><tr><td>
     <h2><a href="">Bacchantes | Le retour de Dionysos</a></h2>
     <p>
-        <img src="p2.png" width="100%" height="120px" alt="">
+        <img src="p2.png" width="100%" height="120px" alt=""><br>
         POUR NOUS METTRE DANS L’AMBIANCE des Bacchantes d’Euripide, la première chose à faire, c’est de nous rendre en Grèce, la terre de nos célèbres ancêtres les Grecs. Une fois là-bas, il nous faut encore reculer dans le temps…
     </p>
     </td></tr></table>
 
     <table class="article" border="0" cellpadding="0" cellspacing="0"><tr><td>
     <h2><a href="">Sexe | Les femmes en péril</a></h2>
-    <p><img src="p3.png" width="100%" height="120px" alt="">
+    <p><img src="p3.png" width="100%" height="120px" alt=""><br>
     POUR NOUS METTRE DANS L’AMBIANCE des Bacchantes d’Euripide, la première chose à faire, c’est de nous rendre en Grèce, la terre de nos célèbres ancêtres les Grecs. Une fois là-bas, il nous faut encore reculer dans le temps…
     </p>
     </td></tr></table>
@@ -101,7 +105,7 @@ GRÂCE À L’ENGAGEMENT ENTHOUSIASTE de nouveaux collaborateurs, PHUSIS a le pl
     <table class="article" border="0" cellpadding="0" cellspacing="0"><tr><td>
     <h2><a href="">Bacchantes | Le retour de Dionysos</a></h2>
     <p>
-        <img src="p2.png" width="100%" height="120px" alt="">
+        <img src="p2.png" width="100%" height="120px" alt=""><br>
         POUR NOUS METTRE DANS L’AMBIANCE des Bacchantes d’Euripide, la première chose à faire, c’est de nous rendre en Grèce, la terre de nos célèbres ancêtres les Grecs. Une fois là-bas, il nous faut encore reculer dans le temps…
     </p>
     </td></tr></table>
@@ -110,7 +114,7 @@ GRÂCE À L’ENGAGEMENT ENTHOUSIASTE de nouveaux collaborateurs, PHUSIS a le pl
 </table>
 <p style="padding: 0 10px;">Découvrez les activités de <a href="http://www.phusis.ch/animations/">Phusis | Animations</a> et <a href="http://www.phusis.ch/steve/">PHUSIS | Vins</a>.</p>
 
-<p style="padding: 0 10px;">Pour se désinscrire de newsletter, <a href="{unsubscription_url}">cliquez ici</a>.</p>
+<p style="padding: 0 10px;">Pour se désinscrire de la newsletter, <a href="{unsubscription_url}">cliquez ici</a>.</p>
 </td></tr></table>
 </body>
 </html>
