Tweak the mobile theme

--- a/wp-content/extensions/newsletter/emails/themes/phusis/theme.html
+++ b/wp-content/extensions/newsletter/emails/themes/phusis/theme.html
@@ -50,7 +50,6 @@
 
   	table[class="wrapper"] {
   		width:100% !important;
-      border:
   	}
 
     table[class="article"] {
@@ -61,7 +60,7 @@
   </style>
 </head>
 
-<table cellspacing="0" cellpadding="0" id="header" class="wrapper" style="font-size: 14px; font-family: sans-serif; width: 640px"><tr><td>
+<table cellspacing="0" cellpadding="0" class="wrapper" style="font-size: 14px; font-family: sans-serif; width: 640px"><tr><td>
 <table cellspacing="0" cellpadding="0" id="header" width="100%">
 <tr><td colspan="2"><h1 style="margin: 0;"><img src="newsletter_title_philosophie.png" alt="Phusis Philosophie; Michel Herren et Cie.; www.phusis.ch" width="50%" style="min-width: 400px; max-width: 100%;"></h1></td></tr>
 
@@ -94,7 +93,7 @@ GRÂCE À L’ENGAGEMENT ENTHOUSIASTE de nouveaux collaborateurs, PHUSIS a le pl
         POUR NOUS METTRE DANS L’AMBIANCE des Bacchantes d’Euripide, la première chose à faire, c’est de nous rendre en Grèce, la terre de nos célèbres ancêtres les Grecs. Une fois là-bas, il nous faut encore reculer dans le temps…
     </p>
     </td></tr></table>
-
+    <div style="clear: both; height: 0;"></div>
     <table class="article" border="0" cellpadding="0" cellspacing="0"><tr><td>
     <h2><a href="">Sexe | Les femmes en péril</a></h2>
     <p><img src="p3.png" width="100%" height="120px" alt=""><br>
