--- a/index/index.html
+++ b/index/index.html
@@ -16,10 +16,12 @@
 <body>
 <div class="main_panel phusis">
 <a href="http://www.phusis.ch/phusis/">
+<div class="link_wrapper">
 <p>
-<img src="index/phusis.png" alt="" height="360" /><br />
-<img src="index/phusis_title.jpg" height="48" width="160" alt="Phusis" />
+<img src="index/phusis_transparent.png" alt="" height="360" /><br />
+<img src="index/phusis_title.png" height="48" width="160" alt="Phusis" />
 </p>
+</div>
 </a>
 </div>
 
@@ -27,31 +29,37 @@
 
 <div class="subsite animations">
 <a href="http://www.phusis.ch/animations/">
+<div class="link_wrapper">
 <p>
   <img src="index/animations.jpg" width="72" height="72" class="subsite_photo" alt="" />
   <img src="index/animations_title.png" height="72" width="309" class="subsite_title" alt="Animations" />
-  <img src="index/cygne_dark.png" height="72" width="52" alt="" class="subsite_cygne" />
+  <img src="index/cygne_transparent.png" height="72" width="52" alt="" class="subsite_cygne" />
 </p>
+</div>
 </a>
 </div>
 
 <div class="subsite philosophie">
 <a href="http://www.phusis.ch/philosophie/">
+<div class="link_wrapper">
 <p>
-  <img src="index/philosophie.jpg" width="72" height="72" class="subsite_photo" alt="" />
+  <img src="index/cygne_transparent.png" height="72" width="52" alt="" class="subsite_cygne" />
   <img src="index/philosophie_title.png" height="72" width="309" class="subsite_title" alt="Philosophie" />
-  <img src="index/cygne_light.png" height="72" width="52" alt="" class="subsite_cygne" />
+  <img src="index/philosophie.jpg" width="72" height="72" class="subsite_photo" alt="" />
 </p>
+</div>
 </a>
 </div>
 
 <div class="subsite vins">
 <a href="http://www.phusis.ch/steve/">
+<div class="link_wrapper">
 <p>
   <img src="index/vins.jpg" width="72" height="72" class="subsite_photo" alt="" />
   <img src="index/vins_title.png" height="72" width="309" class="subsite_title" alt="Vins" />
-  <img src="index/cygne_dark.png" height="72" width="52" alt="" class="subsite_cygne" />
+  <img src="index/cygne_transparent.png" height="72" width="52" alt="" class="subsite_cygne" />
 </p>
+</div>
 </a>
 </div>
 </div>
